--- a/services/auth-service/package.json
+++ b/services/auth-service/package.json
@@ -55,6 +55,7 @@
     "@loopback/rest": "^9.1.2",
     "@loopback/rest-explorer": "^3.0.6",
     "@loopback/service-proxy": "^3.0.6",
+    "loopback-connector-mongodb": "^5.5.0",
     "tslib": "^2.0.0"
   },
   "devDependencies": {
